# seximal

./: Cargo.toml  README.md
src/: lib.rs  rename.rs  sf144.rs  sf52.rs  si12.rs  si144.rs  si24.rs  si332.rs  si52.rs  sisize.rs  su12.rs  su144.rs  su24.rs  su332.rs  su52.rs  susize.rs  util.rs
src/floating_point_types/: mod.rs  sf144.rs  sf52.rs  util.rs
src/signed_integer_types/: mod.rs  si12.rs  si144.rs  si24.rs  si332.rs  si52.rs  sisize.rs
src/unsigned_integer_types/: mod.rs  su12.rs  su144.rs  su24.rs  su332.rs  su52.rs  susize.rs
