[package]
name = "seximal"
version = "0.1.4"
authors = ["artoo"]
description = "A seximal (base6) equivalent of Rust's type system."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1"
